# fsl

./: .gitignore  FRESH_DEVICE_SETUP.md  README.md  SETUP.md  pyproject.toml
configs/: app.yaml  data.yaml  nms_data.yaml  train_letters.yaml  train_nms.yaml  train_words.yaml
models/: nms_label_encoder.joblib  words_label_encoder.joblib  words_model.joblib
reports/: metrics.json
src/fsl/: __init__.py  app.py  config.py  constants.py  evaluate.py  train_letters.py  train_nms.py  train_words.py
src/fsl/data/: extract_nms_frames.py  extract_word_frames.py  io.py
src/fsl/features/: landmarks.py  nms.py
src/fsl/inference/: __init__.py  predictor.py
src/fsl/models/: random_forest.py
tests/: test_data_io.py  test_label_mapping.py  test_landmark_features.py  test_nms_features.py  test_stability.py
