[project]
name = "camera-based-holistic-fsl"
version = "0.1.0"
description = "Realtime static FSL recognition (A-Z + selected words) using webcam and MediaPipe landmarks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "opencv-python>=4.9.0",
  "mediapipe==0.10.14",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.4.0",
  "joblib>=1.3.2",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
